adding scritps to remote build and publish the repo

--- a/.build/cloudbuild.publish.yaml
+++ b/.build/cloudbuild.publish.yaml
@@ -5,3 +5,7 @@ steps:
   # Test
   - name: 'gcr.io/cloud-builders/bazel'
     args: ['test', '//...']
+  # Deploy
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['app', 'deploy']
+    timeout: '600s'
