update build to include bazel repos check

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -10,7 +10,6 @@
 # If you would like to upload your .git directory, .gitignore file or files
 # from your .gitignore file, remove the corresponding line
 # below:
-.git
 .gitignore
 
 # Binaries for programs and plugins
@@ -23,3 +22,7 @@
 *.test
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Ignore all bazel-* symlinks. There is no full list since this can change
+# based on the name of the directory bazel is cloned into.
+/bazel-*
