--- a/.build/cloudbuild.publish.yaml
+++ b/.build/cloudbuild.publish.yaml
@@ -5,6 +5,7 @@ steps:
   # Test
   - name: 'gcr.io/cloud-builders/bazel'
     args: ['test', '//...']
+    waitFor: ['-']  # The '-' indicates that this step begins immediately.
   # Deploy
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
