--- a/.build/cloudbuild.publish.yaml
+++ b/.build/cloudbuild.publish.yaml
@@ -6,7 +6,7 @@ steps:
   - name: 'gcr.io/cloud-builders/bazel'
     args: ['test', '//...']
     waitFor: ['-']  # The '-' indicates that this step begins immediately.
-  # Deploy
+  # Deploy - no promote
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
+    args: ['app', 'deploy', '--no-promote']
     timeout: '600s'
