--- a/.build/cloudbuild.publish.yaml
+++ b/.build/cloudbuild.publish.yaml
@@ -1,11 +1,12 @@
 steps:
-  # Build
-  - name: 'gcr.io/cloud-builders/bazel'
-    args: ['build', '//:drawfh', '--verbose_failures']
+  # Build the module.
+  - name: 'golang'
+    args: ['go', 'build', './...']
+    env: ['GO111MODULE=on']
   # Test
-  - name: 'gcr.io/cloud-builders/bazel'
-    args: ['test', '//...']
-    waitFor: ['-']  # The '-' indicates that this step begins immediately.
+  - name: 'golang'
+    args: ['go', 'test', './...']
+    env: ['GO111MODULE=on']
   # Deploy - no promote
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy', '--no-promote']
