--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
+.idea/
 
 ### Bazel ###
 # gitignore template for Bazel build system
