update cloud build for better manual builds

--- a/.build/cloudbuild.tagged.yaml
+++ b/.build/cloudbuild.tagged.yaml
@@ -9,5 +9,5 @@ steps:
     env: ['GO111MODULE=on']
   # Deploy - no promote, this is intended to only by run on tag pushes. (releases)
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--no-promote']
+    args: ['app', 'deploy', '--no-promote', '--version', '$TAG_NAME']
     timeout: '600s'
