--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,9 @@
 runtime: go112
+
+instance_class: F1
 automatic_scaling:
-  max_num_instances: 1
+  max_instances: 1
+
 handlers:
 - url: /
   static_files: www/index.html
